# q4-2024-atreides

./: .env.gpg  .gitignore  ARCHITECTURE.MD  LICENSE  README.md  config.yaml  encrypt-env.sh  encrypt-secrets.sh  load-model.sh  pyproject.toml  run-clue.sh  save-models.sh  secrets.tar.gpg  setup.sh  successful-torchtune-runs.txt  train-llama3.sh  train-sherlock.sh  train.sh
experiments/: 000-attention.ipynb  001-langfuse.ipynb  002-llama3.ipynb  003-logic-problem-generator.ipynb  004-clue.ipynb  005-temporal-clue.ipynb  008-attendance.ipynb  009-html.ipynb  01-algebra.ipynb  01-langfuse.ipynb  01-tokenizers.ipynb  011-logits-processors.ipynb  014-trainer.ipynb  015-trainer.ipynb  017-trainer.ipynb  018-trainer.ipynb  02-llama3.ipynb  021-trainer.ipynb  023-trainer.ipynb  027-trainer.ipynb  03-logic-problem-generator.ipynb  030-trainer.ipynb  036-trainer.ipynb  040-trainer.ipynb  041-trainer.ipynb  042-trainer.ipynb  043-trainer.ipynb  046-trainer.ipynb  048-trainer.ipynb  05-clue.ipynb  05-temporal-clue.ipynb  053-trainer.ipynb  054-trainer.ipynb  055-trainer.ipynb  057-trainer.ipynb  058-trainer.ipynb  06-reinforcement-learning.ipynb  063-trainer.ipynb  065-trainer.ipynb  068-trainer.ipynb  (+86 more)
experiments/data/: chain-of-thought-examples.json  temporal-clue-puzzles-2.json  temporal-clue-puzzles-5.json  temporal-clue-puzzles.json
experiments/lib/: 15-reference-server.ipynb  atreides.py  clue.py  cp.py  data.py  langfuse.py  logits_processors.py  temporal_clue.py  tokenizer.py  utils.py  vllm-logging-config.json  vllm.py  (+1 more)
recipes/: test.yaml  test2.yaml  test3.yaml
(+55 files in other folders)
