[project]
name = "atreides"
version = "0.1.0"
description = "Q4 2024 Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "datasets>=3.0.1",
    "fairscale>=0.4.13",
    "llama-stack>=0.0.39",
    "neptune>=1.12.0",
    "python-constraint>=1.4.0",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "tokenizers>=0.20.0",
    "torch>=2.4.1",
    "wandb>=0.18.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
