[project]
name = "atreides"
version = "0.1.0"
description = "Q4 2024 Experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.1",
    "bitsandbytes==0.42.0",
    "black>=24.10.0",
    "datasets>=3.0.1",
    "fairscale>=0.4.13",
    "fastapi[standard]>=0.115.3",
    "huggingface-hub[hf-transfer]>=0.25.1",
    "llama-stack>=0.0.39",
    "matplotlib>=3.9.2",
    "minikanren>=1.0.3",
    "neptune>=1.12.0",
    "ortools>=9.11.4210",
    "python-constraint>=1.4.0",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "tokenizers>=0.20.0",
    "torch>=2.4.0",
    "torchao>=0.6.1",
    "torchtune",
    "vllm>=0.6.3",
    "wandb>=0.18.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
torchtune = { git = "https://github.com/pytorch/torchtune", rev = "4b6877a6ef31a1f987c27594eaf8fe467b5ab785" }
